	  with some clients.
	* Don't do an SRV lookup for a STUN server associated with the account
	  if one is already set globally in prefs.
	* Don't send custom smileys larger than the recommended maximum object size
	  specified in the BoB XEP.   This prevents a client from being
	  disconnected by servers that dislike overly-large stanzas.

	Yahoo:
	* Don't send <span> and </span> tags.  (Fartash Faghri)
	* Support PingBox.  PingBoxes will appear as pbx/PingBoxName.  (Kartik
	  Mohta)

	Pidgin:
	* Correctly size conversation and status box entries when the
	  interior-focus style property is diabled. (Gabriel Schulhof)
	* Correctly handle a multiline text field being required in a
	  request form.  (Thanks to Florian Zeitz for finding this problem)
	* Search friends by email-addresses in the buddy list. (Luoh Ren-Shan)
	* Allow dropping an image on Custom Smiley window to add a new one.
	* Prompt for confirmation when clearing a whiteboard (doodle) session.
	  (Kartik Mohta)
	* Use the "hand" cursor when hovering over usernames in chat history to
	  indicate that the username is an actionable item.
	* Double-clicking usernames in chat history will open an IM with that
	  user.
	* Put an icon on the "Filter" button in the debug window.
	* Don't treat "/messages/like/this " as commands.
	* Explicitly mark user interaction when inserting smilies from the
	  toolbar so "Undo" correctly removes these smilies.
	* Clicking "New" or "Saved" in the status selector menu while typing a
	  status message no longer keeps the status entry area stuck in "typing"
	  mode forever.
	* Show tooltips for ellipsized conversation tabs.  On older systems,
	  tooltips will show for all tabs.
	* The File Transfers and Debug Window windows are no longer created as
	  dialogs.  These windows should now have minimize buttons in many
	  environments in which they were previously missing (including Windows).
	* Smiley themes with Windows line endings no longer cause theme